# ReadyNextOsDrive

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/architecture/: AUTH_TOKEN_FLOW.md  BUILD_AND_ICONS.md
docs/project/: CLAUDE.md
docs/reviews/: REVIEW.md  UX-REVIEW.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  db.rs  diff.rs  error.rs  main.rs  sync.rs  transfer.rs  trash.rs  watcher.rs
src/components/: ConflictDialog.tsx  SyncToast.tsx
src/lib/: tauri.ts
src/pages/: ActivityPage.tsx  LoginPage.tsx  SettingsPage.tsx  StatusPage.tsx  UpdatePage.tsx
